# learn-ai-agents-service-with-vinod

./: SECURITY_FIXES.md  azure.yaml
docs/: apim_integration.md  azure_account_setup.md  azure_app_service_auth_setup.md  deployment.md  other_features.md  sample_questions.md
infra/: api.bicep  frontend.bicep  main.bicep  main.json  main.parameters.json
infra/core/ai/: cognitiveservices.bicep  cognitiveservices.json
infra/core/gateway/: apim.bicep  apim.json
scripts/: configure_apim_frontend.sh  postdeploy.ps1  setup_credential.ps1  validate_env_vars.ps1
src/: gunicorn.conf.py  pyproject.toml
src/backend/: Dockerfile  requirements.txt
src/backend/api/: main.py  routes.py  search_index_manager.py
src/frontend/: .env.development  Dockerfile  env-config.sh  index.html  nginx.conf  pnpm-lock.yaml  vite.config.ts
src/frontend/src/: vite-env.d.ts
src/frontend/src/components/: App.tsx
src/frontend/src/examples/: apiMigrationExamples.ts
src/frontend/src/utils/: api.ts  apiConfig.ts
tests/: test_search_index_manager.py
